more work on final  project prelim results. Got the detection working

--- a/lab-devel/packages/finalproject/CMakeLists.txt
+++ b/lab-devel/packages/finalproject/CMakeLists.txt
@@ -10,7 +10,7 @@ project(finalproject)
 find_package(catkin REQUIRED COMPONENTS
   cv_bridge
   duckietown_msgs
-  gemoetry_msgs
+  geometry_msgs
   roscpp
   rospy
   std_msgs
